; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libvmmapi/extr_vmmapi.c_vm_destroy.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libvmmapi/extr_vmmapi.c_vm_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vmctx = type { i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vm_destroy(%struct.vmctx* %0) #0 {
  %2 = alloca %struct.vmctx*, align 8
  store %struct.vmctx* %0, %struct.vmctx** %2, align 8
  %3 = load %struct.vmctx*, %struct.vmctx** %2, align 8
  %4 = icmp ne %struct.vmctx* %3, null
  %5 = zext i1 %4 to i32
  %6 = call i32 @assert(i32 %5)
  %7 = load %struct.vmctx*, %struct.vmctx** %2, align 8
  %8 = getelementptr inbounds %struct.vmctx, %struct.vmctx* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp sge i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %1
  %12 = load %struct.vmctx*, %struct.vmctx** %2, align 8
  %13 = getelementptr inbounds %struct.vmctx, %struct.vmctx* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = call i32 @close(i64 %14)
  br label %16

16:                                               ; preds = %11, %1
  %17 = load %struct.vmctx*, %struct.vmctx** %2, align 8
  %18 = getelementptr inbounds %struct.vmctx, %struct.vmctx* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = call i32 @DESTROY(i32 %19)
  %21 = load %struct.vmctx*, %struct.vmctx** %2, align 8
  %22 = call i32 @free(%struct.vmctx* %21)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @close(i64) #1

declare dso_local i32 @DESTROY(i32) #1

declare dso_local i32 @free(%struct.vmctx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
